cargo-features = ["edition2024"]

[package]
name = "blockstore"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "An IPLD blockstore capable of holding arbitrary data indexed by CID"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
repository = "https://github.com/eigerco/blockstore"
readme = "README.md"
rust-version = "1.75"
# crates.io is limited to 5 keywords and 5 categories
keywords = ["bitswap", "blockstore", "ipld", "cid"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "data-structures"]

[dependencies]
cid = { version = "0.11.0", default-features = false }
dashmap = { version = "5.5.3", optional = true }
lru = { version = "0.12.2", optional = true }
multihash = { version = "0.19.1", default-features = false}
thiserror = { version = "1.0.40", default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = { version = "2", optional = true }
# Upgrading this dependency invalidates existing persistent dbs.
# Those can be restored by migrating between versions:
# https://docs.rs/sled/latest/sled/struct.Db.html#examples-1
sled = { version = "0.34.7", optional = true }
tokio = { version = "1.29.0", features = ["macros", "rt"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.68", optional = true }
rexie = { version = "0.5.0", optional = true }
wasm-bindgen = { version = "0.2.91", optional = true }

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.29.0", features = ["macros", "rt"] }
tempfile = "3.10"

# doc-tests
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.41"

[features]
default = ["std", "dashmap"]
dashmap = ["dep:dashmap"]
indexeddb = ["dep:js-sys", "dep:rexie", "dep:wasm-bindgen"]
lru = ["dep:lru"]
redb = ["dep:redb", "dep:tokio"]
sled = ["dep:sled", "dep:tokio"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.cargo-udeps.ignore]
development = ["multihash-codetable"]

[patch.crates-io]
thiserror = { git = "https://github.com/quartiq/thiserror.git", branch = "no-std" }
